--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.16",
     "tailwind-merge": "^3.0.1",
@@ -54,6 +55,7 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^1.8.29",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
