--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed:admin": "tsx src/scripts/seed-admin.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.0",
@@ -33,7 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "next": "^15.2.4",
-    "next-themes": "^0.4.6",
+    "next-themes": "^1.2.0",
     "pg": "^8.13.1",
     "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
@@ -60,6 +61,8 @@
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.3",
+    "dotenv": "^16.3.1",
     "typescript": "^5"
   }
 }
