--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.2.0",
+    "@react-three/rapier": "^2.1.0",
     "@tanstack/react-table": "^8.21.2",
+    "@types/three": "^0.178.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,8 +37,9 @@
     "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
+    "meshline": "^3.3.1",
     "next": "^15.2.4",
-    "next-themes": "^1.2.0",
+    "next-themes": "^0.4.6",
     "pg": "^8.13.1",
     "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
@@ -45,6 +50,7 @@
     "styled-components": "^6.1.16",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.178.0",
     "uuid": "^11.0.5",
     "zod": "^3.24.2"
   },
@@ -57,12 +63,12 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/recharts": "^1.8.29",
+    "dotenv": "^16.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.3",
-    "dotenv": "^16.3.1",
     "typescript": "^5"
   }
 }
